--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,9 @@ name: OnionCurrency
 version: '1.0-SNAPSHOT'
 main: com.cleveronion.onionCurrency.OnionCurrency
 api-version: '1.20'
+description: "A plugin for expanding currencies for Minecraft Server"
+author: "CleverOnion"
+commands:
+  oc:
+    description: "OnionCurrency command"
+    usage: "/oc <command>"
